src/test/ui/issues/issue-17431-4.stderr
error[E0072]: recursive type `Foo` has infinite size
  --> $DIR/issue-17431-4.rs:3:1
   |
LL | struct Foo<T> { foo: Option<Option<Foo<T>>>, marker: marker::PhantomData<T> }
   | ^^^^^^^^^^^^^   --------------------------- recursive without indirection
   | |
   | recursive type has infinite size
   |
   = help: insert indirection (e.g., a `Box`, `Rc`, or `&`) at some point to make `Foo` representable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0072`.
